--- a/src/templates/countryCard.hbs
+++ b/src/templates/countryCard.hbs
@@ -9,13 +9,13 @@
             <p class="country-card-title">languages:</p>
             <ul class="country-card-text">
                 {{#each languages}}
-                <li class="tag-list__item">{{this.name}}</li>
+                <li>{{this.name}}</li>
                 {{/each}}
             </ul>
 
         </div>
         <div class="country-flag">
-            <img src="{{flag}}" width="800px" height="400px" alt="flag">
+            <img src="{{flag}}" width="400" height="200" alt="flag">
         </div>
     </div>
 </div>
